--- a/assets/sass/_front-page.scss
+++ b/assets/sass/_front-page.scss
@@ -6,7 +6,7 @@
 			opacity: 1;
 		}
 
-		.fa-play {
+		.placeholder-image .fa-play {
 			margin-top: 20%;
     		color: black;
 		}
