--- a/assets/sass/_product-pages.scss
+++ b/assets/sass/_product-pages.scss
@@ -156,6 +156,11 @@
 				font-size: 20px;
 			}
 
+			#section_4_column_1 {
+				padding-top: 75px;
+				padding-bottom: 75px;
+			}
+
 			#section_4_column_2 {
 
 				.feature-container {
